Full code refactory
